Fix align in floating button

--- a/src/js/ui-components/FloatingButton/style.scss
+++ b/src/js/ui-components/FloatingButton/style.scss
@@ -5,7 +5,6 @@
   transform: translateX(-50%);
   padding: 8px 16px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
   font-size: 0.875rem;
   font-weight: 500;
